@@ -4,8 +4,9 @@ use strict;
 use warnings;
 
 use Mo qw(build default is);
-use Mo::utils 0.28 qw(check_isa check_length check_number_id check_required);
+use Mo::utils 0.28 qw(check_isa check_length check_required);
 use Mo::utils::Array qw(check_array_object);
+use Mo::utils::Number qw(check_positive_natural);
 
 our $VERSION = 0.02;
 
@@ -45,7 +46,7 @@ sub BUILD {
 	check_isa($self, 'date', 'DateTime');
 
 	# Check id.
-	check_number_id($self, 'id');
+	check_positive_natural($self, 'id');
 
 	# Check message.
 	check_required($self, 'message');
@@ -176,10 +177,6 @@ Returns string.
                  Parameter 'message' has length greater than '4096'.
                          Value: %s
 
-         From Mo::utils::check_number_id():
-                 Parameter 'id' must be a natural number.
-                         Value: %s
-
          From Mo::utils::check_required():
                  Parameter 'author' is required.
                  Parameter 'date' is required.
@@ -192,6 +189,10 @@ Returns string.
                  Parameter 'comments' with array must contain 'Data::Message::Board::Comment' objects.
                          Value: %s
                          Reference: %s
+
+         From Mo::utils::Number::check_positive_natural():
+                 Parameter 'id' must be a positive natural number.
+                         Value: %s
 
 
 =head1 EXAMPLE
@@ -276,7 +277,8 @@ Returns string.
 
 L<Mo>,
 L<Mo::utils>,
-L<Mo::utils::Array>.
+L<Mo::utils::Array>,
+L<Mo::utils::Number>.
 
 =head1 SEE ALSO
 
