@@ -108,8 +108,8 @@ eval {
 		'message' => 'This is message.',
 	);
 };
-is($EVAL_ERROR, "Parameter 'id' must be a natural number.\n",
-	"Parameter 'id' must be a natural number (bad).");
+is($EVAL_ERROR, "Parameter 'id' must be a positive natural number.\n",
+	"Parameter 'id' must be a positive natural number (bad).");
 clean();
 
 # Test.
