@@ -2,6 +2,8 @@
  - Add SEE ALSO section to doc.
  - Move check_array_object() to Mo::utils::Array.
  - Regen README file.
+ - Rewrite check_number_id() to
+   Mo::utils::Number::check_positive_natural().
  - Sort module usage in EXAMPLES in doc.
  - Update copyright years.
 
